--- a/REUSE.toml
+++ b/REUSE.toml
@@ -7,5 +7,5 @@ SPDX-PackageComment = "The code in this project may include calls to APIs (\"API
 [[annotations]]
 path = "**"
 precedence = "aggregate"
-SPDX-FileCopyrightText = "2025 SAP SE or an SAP affiliate company and Open Payment Framework contributors"
+SPDX-FileCopyrightText = "2025 SAP SE or an SAP affiliate company"
 SPDX-License-Identifier = "Apache-2.0"
